kubernetes/apps/security/auth/zitadel/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel-route
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Zitadel
    gethomepage.dev/description: Identity Management
    gethomepage.dev/group: Security
    gethomepage.dev/icon: zitadel.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=zitadel"
spec:
  hostnames:
  - "zitadel.${DOMAIN1}"
  parentRefs:
    - name: envoy-internal
      namespace: network
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ui/v2/login
      backendRefs:
        - name: zitadel-login
          port: 3000
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zitadel
          port: 8080
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: zitadel-login-route
# spec:
#   hostnames:
#   - "zitadel-login.${DOMAIN1}"
#   parentRefs:
#     - name: internal
#       namespace: kube-system
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: zitadel-login
#           port: 3000
