kubernetes/apps/security/auth/zitadel/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zitadel
spec:
  description: "Network policy for Zitadel identity provider"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zitadel
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: zitadel
    # Allow ingress from envoy-gateway
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
    # Allow ingress from internal OIDC clients
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: flux-system
        - matchLabels:
            io.kubernetes.pod.namespace: home-system
        - matchLabels:
            io.kubernetes.pod.namespace: prod-system
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP

  egress:
    # Allow access to Vault
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    # Allow same namespace traffic
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: zitadel
    # Allow access to PostgreSQL
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    # Allow access to Kubernetes API
    - toEntities:
        - kube-apiserver
    # Allow external SMTP/OAuth providers
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "587"
              protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
